# Berki

./: .env  .gitignore  README.md  Read_news_api.ipynb  app.py  deno.json  gemini_api.ipynb  news_Donald_Trump_20250621_120930.csv  news_api.ipynb  news_artificial_intelligence_20250621_115814.csv  newsapi_Google_20250621_141313.json  newsapi_Iran_20250621_125414.csv  newsapi_Stable_Coin_20250621_124158.csv  newsapi_china_20250621_150000.json  package-lock.json  requirements.txt
api/: README.md  app.py  pyproject.toml
app/components/: dashboard.tsx  theme-provider.tsx
static/: script.js
templates/: index.html
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  constants.ts  index.css  types.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/components/: dashboard.tsx  login-screen.tsx  news-analysis.tsx  stock-chart.tsx  stock-recommendations.tsx  theme-toggle.tsx
ui/src/components/: Navbar.tsx  PortfolioDisplay.tsx  navbar.css  portfoliodisplay.css
