[project]
name = "berki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
]
